# PeakRDL-BusDecoder

./: .gitignore  CONTRIBUTING.md  README.md  coverage.xml  package.json  pyproject.toml  tsconfig.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cocotb-sim.yml  test.yml
docs/: api.rst  architecture.rst  conf.py  configuring.rst  faq.rst  index.rst  licensing.rst  limitations.rst  parameters.rst
docs/cpuif/: apb.rst  axi4lite.rst  customizing.rst  internal_protocol.rst  introduction.rst
docs/udps/: extended_swacc.rst  fixedpoint.rst  intro.rst  read_buffering.rst  signed.rst  write_buffering.rst
hdl-src/: apb3_intf.sv  apb4_intf.sv  axi4lite_intf.sv  regblock_udps.rdl
src/: extension.ts
src/peakrdl_busdecoder/: __init__.py  __peakrdl__.py  addr_decode.py  decode_logic_gen.py  decoder.py  dereferencer.py  design_scanner.py  design_state.py  exporter.py  forloop_generator.py  listener.py  module_tmpl.sv  node_meta.py  package_tmpl.sv  rdl_params.py  scan_design.py  struct_gen.py  struct_generator.py  sv_assertion.py  sv_int.py  sv_parameters.py  utils.py  validate_design.py
src/peakrdl_regblock/: __init__.py  __peakrdl__.py  addr_decode.py  dereferencer.py  exporter.py  external_acks.py  module_tmpl.sv  package_tmpl.sv  parity.py  scan_design.py  validate_design.py
tests/: .coveragerc  README.md  conftest.py  pytest.ini  requirements.txt  run.sh  test_hypothesis.py  test_sv_int.py
tests/body/: test_body.py  test_combinational_body.py  test_for_loop_body.py  test_if_body.py  test_struct_body.py
tests/cocotb/: IMPLEMENTATION_SUMMARY.md  (+4 more)
(+156 files in other folders)
